added style.css, responsive.css file and basic css and html file basic template

--- a/index.html
+++ b/index.html
@@ -5,9 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
+
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
+
+    <!-- Template Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+    <!-- Box Icon CDN -->
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 
 <body>
+
+    <!-- ===== Document Wrapper Start ===== -->
+    <div class="main-wrapper">
+
+        <!-- ===== Main Start ===== -->
+        <main id="content" class="site-main">
+
+
+
+        </main>
+        <!-- ===== Main End ===== -->
+
+        <!-- Footer -->
+        <footer id="footer" class="footer">
+
+        </footer>
+        <!-- Footer End -->
+
+    </div>
+    <!-- ===== Document Wrapper End ===== -->
 
 </body>
 
