--- a/index.html
+++ b/index.html
@@ -29,7 +29,38 @@
         <!-- ===== Main Start ===== -->
         <main id="content" class="site-main">
 
-
+            <!-- Hero Section -->
+            <section class="hero" id="hero">
+                <div class="container">
+                    <div class="hero-content">
+                        <div class="row">
+                            <!-- Left Side -->
+                            <div class="col-md-12 col-lg-6">
+                                <h1 class="hero-head">It's good tea time at The Tea House</h1>
+                                <p>Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste
+                                    Buds.
+                                </p>
+                                <a href="#" class="button">Explore More <i class='bx  bx-arrow-up-right-stroke'></i>
+                                </a>
+                            </div>
+                            <!-- Right Sise -->
+                            <div class="col-md-12 col-lg-6">
+                                <div class="hero-image">
+                                    <img src="assets/images/banner.png" alt="Hero Image">
+                                    <div class="hero-popup">
+                                        <img src="assets/images/star.png" alt="Popup Star">
+                                        <div class="popup-reating">
+                                            <h5>5.00</h5>
+                                            <span>Trust Pilot Ratings</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Hero Section End -->
 
         </main>
         <!-- ===== Main End ===== -->
