added featured products section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,64 @@
             </section>
             <!-- Hero Section End -->
 
+            <!-- Featured Products Section -->
+            <section id="featured-product" class="featured-product section-ptb">
+                <div class="container">
+                    <!-- Section Title -->
+                    <div class="section-title">
+                        <h1>Our Featured Products</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised words which don't look
+                            even slightly believable. </p>
+                    </div>
+                    <!-- Section Title End -->
+
+                    <div class="row">
+                        <!-- Featured Product #01 -->
+                        <div class="col-12 col-md-6 col-lg-3 mb-24">
+                            <div class="featured-product-wrap">
+                                <div class="image">
+                                    <img src="assets/images/tea-1.png" alt="Featured Product - Tea 1">
+                                </div>
+                                <h4>Milk Tea</h4>
+                                <p>Creamer could be replaced by fresh milk</p>
+                            </div>
+                        </div>
+                        <!-- Featured Product #02 -->
+                        <div class="col-12 col-md-6 col-lg-3 mb-24">
+                            <div class="featured-product-wrap">
+                                <div class="image">
+                                    <img src="assets/images/tea-2.png" alt="Featured Product - Tea 2">
+                                </div>
+                                <h4>Black Tea</h4>
+                                <p>Creamer could be replaced by fresh milk</p>
+                            </div>
+                        </div>
+                        <!-- Featured Product #03 -->
+                        <div class="col-12 col-md-6 col-lg-3 mb-24">
+                            <div class="featured-product-wrap">
+                                <div class="image">
+                                    <img src="assets/images/tea-3.png" alt="Featured Product - Tea 3">
+                                </div>
+                                <h4>Lemon Tea</h4>
+                                <p>Creamer could be replaced by fresh milk</p>
+                            </div>
+                        </div>
+                        <!-- Featured Product #04 -->
+                        <div class="col-12 col-md-6 col-lg-3 mb-24">
+                            <div class="featured-product-wrap">
+                                <div class="image">
+                                    <img src="assets/images/tea-4.png" alt="Featured Product - Tea 4">
+                                </div>
+                                <h4>Green Tea</h4>
+                                <p>Creamer could be replaced by fresh milk</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Featured Products Section End -->
+
         </main>
         <!-- ===== Main End ===== -->
 
