added great tea section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,60 @@
             </section>
             <!-- Featured Products Section End -->
 
+            <!-- Great Tea Section -->
+            <section id="great-tea" class="great-tea section-pb">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-5 mb-24 image-side">
+                            <div class="right-side image-grid">
+                                <div class="box pink"></div>
+                                <div class="box yellow">
+                                    <img src="assets/images/fresh-1.png" alt="fresh 1">
+                                </div>
+                                <div class="box green">
+                                    <img src="assets/images/fresh-2.png" alt="Fresh 2">
+                                </div>
+                                <div class="box gray"></div>
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-7 mb-24">
+                            <div class="left-right">
+                                <!-- Section Title -->
+                                <div class="section-title">
+                                    <h1>Great Tea, Freshly Presented</h1>
+                                    <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all
+                                        possessions . It represents the highest quality and self expectation.
+                                        Establishing
+                                        in 2006, Gong cha had been deeply appreciated by its custoers because of good
+                                        words
+                                        of mouth and unique customized service orginated from Taiwan.</p>
+                                </div>
+                                <!-- Section Title End -->
+
+                                <ul class="great-tea-list">
+                                    <li>
+                                        <h3>Unique Taste</h3>
+                                        <p>A Unique and different style from other teapots gives a luxurious and
+                                            minimalist impression</p>
+                                    </li>
+                                    <li>
+                                        <h3>Premium Quality</h3>
+                                        <p>Premium Quality that makes tea more elegant and more durable when you use it.
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <h3>Unique Design</h3>
+                                        <p>A unique design that adds style and comfort, making every sip of tea more
+                                            enjoyable.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Great Tea Section End -->
+
         </main>
         <!-- ===== Main End ===== -->
 
