added testimonial section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,64 @@
             </section>
             <!-- Great Tea Section End -->
 
+            <!-- Testimonial Section -->
+            <section id="testimonial" class="testimonial section-pb">
+                <div class="container">
+                    <div class="testimonial-inner mb-24">
+                        <div class="row">
+                            <div class="col-md-12 col-lg-5">
+                                <!-- Section Title -->
+                                <div class="section-title">
+                                    <h1>Meet Our Super Clients</h1>
+                                    <p>There are many variations of passages of Lorem Ipsum available, but the majority
+                                        have suffered alteration in some form, by injected humour, or randomised words
+                                        which don't look even slightly believable.</p>
+                                </div>
+                                <!-- Section Title End -->
+
+                                <a href="#" class="button button-white"><span>Show All</span></a>
+                            </div>
+                            <div class="col-md-12 col-lg-7">
+                                <div class="testimonial-wrapper">
+                                    <!-- Testomonial #01 -->
+                                    <div class="testimonial-content active">
+                                        <img src="assets/images/client.png" class="client-image" alt="Client Image">
+                                        <p>We are providing the best and suitable home insurance services for the people
+                                            who are interested to treatment</p>
+                                        <div class="client-info">
+                                            <h5>Ilham Yuda</h5>
+                                            <span>Businessman</span>
+                                        </div>
+                                        <img src="assets/images/circles.png" class="circles" alt="circles">
+                                    </div>
+                                    <!-- Testomonial #02 -->
+                                    <div class="testimonial-content">
+                                        <img src="assets/images/client.png" class="client-image" alt="Client Image">
+                                        <p>We are providing the best and suitable home insurance services for the people
+                                            who are interested to treatment</p>
+                                        <div class="client-info">
+                                            <h5>Ilham Yuda</h5>
+                                            <span>Businessman</span>
+                                        </div>
+                                    </div>
+                                    <!-- Testomonial #03 -->
+                                    <div class="testimonial-content">
+                                        <img src="assets/images/client.png" class="client-image" alt="Client Image">
+                                        <p>We are providing the best and suitable home insurance services for the people
+                                            who are interested to treatment</p>
+                                        <div class="client-info">
+                                            <h5>Ilham Yuda</h5>
+                                            <span>Businessman</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Testimonial Section End -->
+
         </main>
         <!-- ===== Main End ===== -->
 
