added news & events section

--- a/index.html
+++ b/index.html
@@ -232,6 +232,60 @@
             </section>
             <!-- Testimonial Section End -->
 
+            <!-- News & Events Section -->
+            <section id="news" class="news section-pb">
+                <div class="container">
+                    <!-- Section Title -->
+                    <div class="section-title">
+                        <h1>News & Events</h1>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, or randomised words which don't look
+                            even slightly believable. </p>
+                    </div>
+                    <!-- Section Title End -->
+
+                    <div class="row">
+                        <!-- News Post #01 -->
+                        <div class="col-12 col-md-6 col-lg-4 mb-24">
+                            <div class="news-post-wrap">
+                                <div class="image">
+                                    <img src="assets/images/news-1.png" alt="News Banner">
+                                </div>
+                                <span class="posted-on">Feb 05, 2027</span>
+                                <h3 class="news-title">Collecting 8 points for discount</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available.</p>
+                                <a href="#" class="learn-more">Learn More</a>
+                            </div>
+                        </div>
+                        <!-- News Post #02 -->
+                        <div class="col-12 col-md-6 col-lg-4 mb-24">
+                            <div class="news-post-wrap">
+                                <div class="image">
+                                    <img src="assets/images/news-2.png" alt="News Banner">
+                                </div>
+                                <span class="posted-on">Feb 05, 2027</span>
+                                <h3 class="news-title">Collecting 8 points for discount</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available.</p>
+                                <a href="#" class="learn-more">Learn More</a>
+                            </div>
+                        </div>
+                        <!-- News Post #03 -->
+                        <div class="col-12 col-md-6 col-lg-4 mb-24">
+                            <div class="news-post-wrap">
+                                <div class="image">
+                                    <img src="assets/images/news-3.png" alt="News Banner">
+                                </div>
+                                <span class="posted-on">Feb 05, 2027</span>
+                                <h3 class="news-title">Collecting 8 points for discount</h3>
+                                <p>There are many variations of passages of Lorem Ipsum available.</p>
+                                <a href="#" class="learn-more">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- News & Events Section End -->
+
         </main>
         <!-- ===== Main End ===== -->
 
